# ChimpFlix

./: .dockerignore  .env.demo  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.demo.yml  docker-compose.yml  librust_out.rlib  next.config.ts  package-lock.json  package.json  rust-toolchain.toml  rust_out
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
benches/: fingerprint_bench.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  time.rs  vault.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: agent.rs  agents.rs  anilist.rs  anilist_cache.rs  http.rs  lib.rs  mal.rs  omdb.rs  opensubtitles.rs  plex_oauth.rs  tmdb.rs  trakt.rs  tvdb.rs  tvmaze.rs
crates/server/: Cargo.toml
crates/server/src/: circuit_breaker.rs  client_ip.rs  events.rs  file_watcher.rs  log_buffer.rs  mail_template.rs  mailer.rs  main.rs  net.rs  notifier.rs  session_watcher.rs  ssrf.rs  state.rs  subtitles_lookup.rs  totp.rs  trakt_sync.rs  webhooks.rs
crates/server/src/api/: access.rs  auth.rs  auth_plex.rs  cast.rs  chapters.rs  collections.rs  cors.rs  csrf.rs  episodes.rs  error.rs  health.rs  http_metrics.rs  items.rs  libraries.rs  markers.rs  metrics.rs  mod.rs  my_list.rs  notifications.rs  people.rs  play_state.rs  prefs.rs  previews.rs  rate_limit.rs  scans.rs  seasons.rs  security_headers.rs  stream.rs  subtitles.rs  tags.rs  trakt.rs  two_factor.rs  ws.rs
crates/server/src/api/admin/: access_groups.rs  agents.rs  audit.rs  backup.rs  bulk.rs  collections.rs  dashboard.rs  email.rs  fingerprints.rs  health.rs  jobs.rs  maintenance.rs  mod.rs  network.rs  optimized.rs  plex.rs  preroll.rs  secrets.rs  settings.rs  stats.rs  tasks.rs  tasks_overview.rs  transcoder.rs  users.rs  webhooks.rs
crates/server/src/auth/: cast_token.rs  cookie.rs  extractor.rs  mod.rs  password.rs  secret.rs
crates/server/src/cli/: mod.rs  owner_password.rs  owner_twofa.rs  vault_rotate.rs
crates/server/src/jobs/: error_class.rs  mod.rs  pipeline.rs  progress.rs  scan_gate.rs
crates/server/src/jobs/handlers/: analyze_loudness.rs  bootstrap_season_refs.rs  build_chapter_thumbs.rs  detect_extras_item.rs  detect_markers_file.rs  extract_embedded_subs.rs  fetch_external_ratings.rs  fetch_subtitles_item.rs  generate_preview_sprite.rs  mod.rs  notify_new_content.rs  refresh_logos_item.rs  trakt_pull_user.rs  trakt_push_user_history.rs
crates/server/src/scheduler/: mod.rs
crates/server/src/tasks/: gates.rs  kind.rs  metrics.rs  mod.rs  registry.rs
crates/tacet-core/: Cargo.toml
crates/tacet-core/benches/: fingerprint_bench.rs
crates/tacet-core/examples/: diagnose_match.rs
crates/tacet-core/src/: analyze.rs  blackframe.rs  lib.rs  loudness.rs
crates/tacet-core/src/audio/: ffmpeg.rs  mod.rs
crates/tacet-core/src/boundary/: mod.rs
crates/tacet-core/src/detection/: mod.rs
crates/tacet-core/src/fingerprint/: constellation.rs  mod.rs  peaks.rs
crates/tacet-core/src/matching/: mod.rs
crates/tacet-core/src/storage/: mod.rs
crates/tacet-core/tests/: end_to_end.rs
crates/transcoder/: Cargo.toml
crates/transcoder/src/: capabilities.rs  chapter_thumbs.rs  fingerprint.rs  hwaccel.rs  lib.rs  loudness.rs  markers.rs  previews.rs  probe.rs  rlimit.rs  session.rs
docker/: Dockerfile
docs/: ADMIN_GUIDE.md  API.md  ARCHITECTURE.md  DEMO.md  DEPLOYMENT.md  PERF_PLAN.md  PLEX_PARITY_PLAN.md  PUBLIC_RELEASE_HARDENING.md  SCHEMA.md  admin-redesign-mockups.html  cast-receiver.md  email-mockups.html  intro-detection.md
docs/architecture/v2/: API.md  AUTH.md  FRONTEND.md  JOBS.md  METADATA.md  OVERVIEW.md  README.md  REALTIME.md  REQUIREMENTS.md  SCANNER.md  SCHEMA.md  STORAGE.md  TRANSCODING.md
docs/pipelines/: backend-plan.md  index.html  media.html  pipelines.css  system.html  tasks-ui.html  watch-state.html
docs/redesign/: FEATURES.md  MIGRATION.md  OPERATOR_CHECKLIST.md  account.html  admin-activity.html  admin-credentials.html  admin-general.html  admin-logs.html  admin-maintenance.html  admin-network.html  admin-notifications.html  admin-overview.html  admin-tasks.html  admin-transcoding.html  admin-users.html  app.js  calendar.html  devices.html  home-visibility.html  index.html  integrations.html  libraries.html  notifications.html  playback.html  styles.css
public/: sw.js
scripts/demo/: seed.sql  setup.sh
src/: blackframe.rs  instrumentation.ts  middleware.ts
src/app/: error.tsx  layout.tsx  page.tsx
src/app/login/: page.tsx
src/app/movies/: loading.tsx  page.tsx
src/app/my-list/: page.tsx
src/app/new-popular/: loading.tsx  page.tsx
src/app/search/: loading.tsx  page.tsx
src/app/select-server/: page.tsx
src/app/settings/: page.tsx
src/app/shows/: loading.tsx  page.tsx
src/app/switch/: page.tsx
src/audio/: ffmpeg.rs
src/components/: Card.tsx  ColdStartOverlay.tsx  Hero.tsx  HeroActions.tsx  HeroTrailer.tsx  MyListClient.tsx  NavLinks.tsx  NavPrefetch.tsx  Player.tsx  ProfileMenu.tsx  ProfilePicker.tsx  Rail.tsx  SearchBar.tsx  SeasonEpisodes.tsx  ServerUnreachable.tsx  ServiceWorker.tsx  SettingsClient.tsx  Skeleton.tsx  TitleModalClient.tsx  TopNav.tsx  TrailerPlayer.tsx
src/lib/: admin-token-store.ts  cache-warmer.ts  cache.ts  env.ts  image.ts  library-prefs-client.ts  library-prefs.ts  modal-cache.ts  modal.ts  my-list.ts  play-prefetch.ts  plex-data.ts  plex-types.ts  plex.ts  prefs.ts  request-origin.ts  session.ts  tmdb.ts
src/matching/: mod.rs
web/: .dockerignore  .env.example  eslint.config.mjs  next.config.ts
web/public/: sw.js
web/public/cast/: receiver.html
web/src/app/: apple-icon.tsx  error.tsx  globals.css  icon-512.tsx  icon.tsx  layout.tsx  loading.tsx  manifest.ts  not-found.tsx  page.tsx
web/src/components/: ActivityIndicator.tsx  Brand.tsx  CalendarAvailability.tsx  CalendarClient.tsx  CalendarEpisodeCard.tsx  CalendarEpisodeRow.tsx  CalendarMonthGrid.tsx  CalendarRail.tsx  CalendarSpotlight.tsx  CalendarWeekBoard.tsx  (+78 more)
(+203 files in other folders)
