[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/library",
    "crates/metadata",
    "crates/server",
    "crates/transcoder",
]

[workspace.package]
version = "0.1.0-dev"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/soybigmac/ChimpFlix"
authors = ["ChimpFlix contributors"]

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.8", features = ["macros", "ws"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures = "0.3"
hex = "0.4"
hmac = "0.12"
notify = "6"
rand_core = { version = "0.6", features = ["getrandom"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs", "cors", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
