[package]
name = "chimpflix-metadata"
description = "Metadata agents (TMDB and future sources)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chimpflix-common = { path = "../common" }
anyhow = { workspace = true }
async-trait = { workspace = true }
# bytes::Bytes for assembling streamed-and-capped HTTP responses (see
# opensubtitles.rs subtitle download). reqwest already pulls bytes
# transitively but listing it explicitly is friendlier when grepping.
bytes = "1"
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
