[package]
name = "chimpflix-transcoder"
description = "ffmpeg/ffprobe orchestration for probing and HLS transcoding."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
chimpflix-common = { path = "../common" }
anyhow = { workspace = true }
hex = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
